--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,14 @@ serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 poem-openapi = { version = "1.2.10", features = ["redoc"] }
 poem = { version = "1.2.10", features = ["anyhow", "opentelemetry-prometheus"] }
-
-num_cpus = "0.2.13"
+strum = { version = "0.23", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
+reqwest = { version = "0.11.8", features = ["json"] }
+
+uuid = "0.8.2"
+num_cpus = "0.2.13"
 rand = "0.8.4"
 lazy_static = "1.4.0"
-reqwest = { version = "0.11.8", features = ["json"] }
 tracing = "0.1.29"
 scylla = "0.3.1"
 serde_json = "1"
