--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-poem-openapi = { version = "1.2.10", features = ["redoc"] }
-poem = { version = "1.2.10", features = ["anyhow", "opentelemetry-prometheus"] }
+poem-openapi = { version = "1.2", features = ["redoc", "uuid"] }
+poem = { version = "1.2", features = ["anyhow", "opentelemetry-prometheus"] }
 strum = { version = "0.23", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.8", features = ["json"] }
