--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ poem = { version = "1.2", features = ["anyhow", "opentelemetry-prometheus"] }
 strum = { version = "0.23", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.8", features = ["json"] }
+uuid = { version = "0.8.2", features = ["v4"] }
+tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
 
-uuid = "0.8.2"
 num_cpus = "0.2.13"
 rand = "0.8.4"
 lazy_static = "1.4.0"
@@ -24,4 +25,3 @@ serde_json = "1"
 thiserror = "1.0.30"
 anyhow = "1"
 concread = "0.2.20"
-tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
