--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = { version = "0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.8", features = ["json"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
+tracing-futures = "0.2.5"
 
 num_cpus = "0.2.13"
 rand = "0.8.4"
