update a bunch of stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ chrono = { version = "0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.8", features = ["json"] }
 uuid = { version = "0.8.2", features = ["v4"] }
 tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
-tracing-futures = "0.2.5"
 
+mime = "0.3.16"
+tracing-futures = "0.2.5"
+base64 = "0.13.0"
 num_cpus = "0.2.13"
 rand = "0.8.4"
 lazy_static = "1.4.0"
