--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,23 @@
 version: '3'
 
 services:
+  postgres:
+    container_name: postgres
+    image: postgres:latest
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+
+  lust:
+    container_name: lust
+    image: chillfish8/lust:1.3.6
+    volumes:
+      - "./docker/config.json:/etc/lust/config.json"
+    ports:
+      - "7070:7070"
+    depends_on:
+      - postgres
+
   scylla:
     container_name: scylla
     image: scylladb/scylla:latest
