--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ poem = { version = "1.2", features = ["anyhow", "opentelemetry-prometheus"] }
 strum = { version = "0.23", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.8", features = ["json"] }
-uuid = { version = "0.8.2", features = ["v4"] }
+uuid = { version = "0.8.2", features = ["v4", "serde"] }
 tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }
 
 tracing-futures = "0.2.5"
